--- a/theme/pastebin/index.html
+++ b/theme/pastebin/index.html
@@ -34,7 +34,10 @@
 
         <label>记事本内容 Value</label>
         <div class="input-group mb-3">
-          <textarea class="form-control" id="longURL" placeholder="输入文本 Input text" oninput="loadUrlList()"></textarea>
+          <textarea class="form-control" id="longURL"
+                    placeholder="输入文本 Input text"
+                    oninput="loadUrlList()"
+                    rows="10"></textarea>
         </div>
 
         <div class="input-group mb-3">
