--- a/theme/imghost/index.html
+++ b/theme/imghost/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Image Hosting</title>
-  <link rel="stylesheet" href="https://crazypeace.github.io/Url-Shorten-Worker/styles.css">
+  <link rel="stylesheet" href="https://hide3110.github.io/Url-Shorten-Worker/styles.css">
   <!-- 如果使用CDN资源就放开这一句, 把上面那一句注释掉
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/crazypeace/Url-Shorten-Worker/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hide3110/Url-Shorten-Worker/styles.css">
   -->
 </head>
 <body>
@@ -65,7 +65,7 @@
     </div>
     
     <div class="card-footer">
-      <span> <a href="https://github.com/crazypeace/Url-Shorten-Worker/" target="_self">Fork me on GitHub</a> </span>
+      <span> <a href="https://github.com/hide3110/Url-Shorten-Worker/" target="_self">Fork me on GitHub</a> </span>
     </div>
   </div>
 
@@ -111,18 +111,6 @@
         </div>
       </div>
     </div>
-  </div>
-  
-  <div class="card shadow m-3">
-    <h5 class="card-header">How to use</h5>
-    <div class="card-body">
-      <h5 class="card-title"> </h5>
-
-      <div class="input-group mb-3"> 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/B7wH4tB1-O8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe> 
-       </div> 
-
-    </div>      
   </div>
 
   <script>
@@ -184,9 +172,9 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/gh/lrsjng/jquery-qrcode@0.18.0/dist/jquery-qrcode.min.js" crossorigin="anonymous"></script>
   
-  <script src="https://crazypeace.github.io/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
+  <script src="https://hide3110.github.io/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
   <!-- 如果使用CDN资源就放开这一句, 把上面那一句注释掉
-    <script src="https://cdn.jsdelivr.net/gh/crazypeace/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/hide3110/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
   -->
   <script>    
     function buildValueImg(longUrl) {
